--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>CARICAMENTO...</p>
             </div>
             <!-- Gioco -->
-            <iframe src="gdjs/index.html" id="game" title="Gioco" allow="autoplay; fullscreen *; 
+            <iframe src="resources/index.html" id="game" title="Gioco" allow="autoplay; fullscreen *; 
             geolocation; microphone; camera; midi; monetization; xr-spatial-tracking"></iframe>
         </div>
     </main>
