--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Giuseppe Rossi">
     <meta name="copyright" content="Giuseppe Rossi">
     <meta name="robots" content="all">
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="viewport-fit=contain, width=device-width, initial-scale=1.0, user-scalable=no">
 
     <!-- Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -64,12 +64,8 @@
                 <p>CARICAMENTO...</p>
             </div>
             <!-- Gioco -->
-            <iframe src="https://rebrand.ly/lascoteca-origin" id="game" title="Gioco" allow="autoplay; fullscreen *; 
-            geolocation; microphone; camera; midi; monetization; xr-spatial-tracking"></iframe>
-            <!--
             <iframe src="resources/index.html" id="game" title="Gioco" allow="autoplay; fullscreen *; 
             geolocation; microphone; camera; midi; monetization; xr-spatial-tracking"></iframe>
-            -->
         </div>
     </main>
 
