Added black fade transition after loading

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <main class="container">
         <div class="embed-responsive">
             <!-- Schermata di caricamento -->
+            <div id="transition"></div>
             <div id="loading">
                 <p>CARICAMENTO...</p>
             </div>
