Added Google Search Console verification tag

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         gtag('config', 'G-XQ3XF5X09D');
     </script>
 
+    <!-- Verifica Google Search Console -->
+    <meta name="google-site-verification" content="fNk-PlmX2cCbb6Bxn82zHP9nBngunpATrvITaGcvYhU" />
+
     <!-- PWA Compat -->
     <script src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
 
