Added new favicons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <title>La Scoteca</title>
     <meta name="description" content="Gioco in stile Pixel Art, simpaticamente ispirato a un meme del WEB.">
-    <meta name="keywords" content="Scoteca, Gioco, Game, Arcade, Pixel">
+    <meta name="keywords" content="scoteca, la scoteca, gioco, game, arcade, pixel, meme, mimmo modem, giusreds">
     <meta name="author" content="Giuseppe Rossi">
     <meta name="copyright" content="Giuseppe Rossi">
     <meta name="robots" content="all">
@@ -20,6 +20,8 @@
 
     <!-- Stile -->
     <link rel="stylesheet" href="assets/style.css" type="text/css">
+    <link rel="icon" href="assets/icons/favicon.ico">
+    <meta name="theme-color" content="#282C3C">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ3XF5X09D"></script>
