Added about:blank as default iframe src

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p>CARICAMENTO...</p>
             </div>
             <!-- Gioco -->
-            <iframe id="game" title="Gioco" allow="autoplay; fullscreen *; 
+            <iframe src="about:blank" id="game" title="Gioco" allow="autoplay; fullscreen *; 
             geolocation; microphone; camera; midi; monetization; xr-spatial-tracking"></iframe>
         </div>
     </main>
