--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </main>
 
     <!-- Script -->
-    <script src="assets/lib/jquery-3.5.1.min.js"></script>
-    <script src="assets/lib/js.cookie.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/script.js"></script>
 
 </body>
