--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Giuseppe Rossi">
     <meta name="copyright" content="Giuseppe Rossi">
     <meta name="robots" content="all">
-    <meta name="viewport" content="viewport-fit=contain, width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no">
 
     <!-- Manifest -->
     <link rel="manifest" href="manifest.json">
