--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no">
 
     <!-- Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
 
     <!-- Stile -->
-    <link rel="stylesheet" href="assets/style.css" type="text/css">
-    <link rel="icon" href="assets/icons/favicon.ico">
+    <link rel="stylesheet" href="./assets/style.css" type="text/css">
+    <link rel="icon" href="./assets/icons/favicon.ico">
     <meta name="theme-color" content="#282C3C">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,8 +66,8 @@
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script src="assets/script.js"></script>
-
+    <script src="./assets/script.js"></script>
+    
 </body>
 
 </html>
