Added Apple Meta Tags

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
     <!-- PWA Compat -->
     <script src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
+    
+    <!-- Apple -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <!-- Social Media Preview -->
     <meta property="og:title" content="La Scoteca">
@@ -67,7 +71,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="./assets/script.js"></script>
-    
+
 </body>
 
 </html>
