--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 
     <!-- Verifica Google Search Console -->
     <meta name="google-site-verification" content="fNk-PlmX2cCbb6Bxn82zHP9nBngunpATrvITaGcvYhU" />
-
-    <!-- PWA Compat -->
-    <script src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
     
     <!-- Apple -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -71,6 +68,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="./assets/script.js"></script>
+    <script src="./assets/pwacompat-mod.js"></script>
 
 </body>
 
