--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
     </script>
 
     <!-- Verifica Google Search Console -->
-    <meta name="google-site-verification" content="fNk-PlmX2cCbb6Bxn82zHP9nBngunpATrvITaGcvYhU" />
-    
-    <!-- Apple -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="google-site-verification" content="fNk-PlmX2cCbb6Bxn82zHP9nBngunpATrvITaGcvYhU">
 
     <!-- Social Media Preview -->
     <meta property="og:title" content="La Scoteca">
