--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     <meta property="og:url" content="giusreds.github.io/lascoteca">
     <meta name="twitter:card" content="summary_large_image">
 
+    <!-- Script -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script src="./assets/script.js"></script>
+    <script src="./assets/pwacompat-mod.min.js"></script>
+
 </head>
 
 <body>
@@ -59,12 +65,6 @@
             geolocation; microphone; camera; midi; monetization; xr-spatial-tracking"></iframe>
         </div>
     </main>
-
-    <!-- Script -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script src="./assets/script.js"></script>
-    <script src="./assets/pwacompat-mod.js"></script>
 
 </body>
 
