--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/gh/giusreds/pwadapter@main/pwadapter.min.js"></script>
     <script src="./assets/script.js"></script>
-    <script src="./assets/pwacompat-mod.min.js" async></script>
 
 </body>
 
