reordered icons in webmanifest

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- Manifest -->
     <link rel="manifest" href="./manifest.json">
 
+    <!-- PWAdapter -->
+    <script async src="https://cdn.jsdelivr.net/gh/giusreds/pwadapter@dist/pwadapter.min.js"></script>
+
     <!-- Stile -->
     <link rel="stylesheet" href="./assets/style.css" type="text/css">
     <link rel="icon" href="./assets/icons/favicon.ico">
@@ -43,6 +46,11 @@
     <meta property="og:url" content="giusreds.github.io/lascoteca">
     <meta name="twitter:card" content="summary_large_image">
 
+    <!-- Script -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script src="./assets/script.js"></script>
+
 </head>
 
 <body>
@@ -59,12 +67,6 @@
             geolocation; microphone; camera; midi; monetization; xr-spatial-tracking"></iframe>
         </div>
     </main>
-
-    <!-- Script -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/gh/giusreds/pwadapter@dist/pwadapter.min.js"></script>
-    <script src="./assets/script.js"></script>
 
 </body>
 
