--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 
 <head>
 
+    
+    <!-- Redirect to giusreds.it -->
+    <meta http-equiv="Refresh" content="0; URL=https://games.giusreds.it/lascoteca">
+
+
+
+
     <!-- Proprieta -->
     <meta charset="UTF-8">
     <title>La Scoteca</title>
