removed hosted website

--- a/index.html
+++ b/index.html
@@ -1,78 +1,8 @@
-<!-- (c)2020 Giuseppe Rossi -->
-
 <!DOCTYPE HTML>
-<html lang="it">
+<html>
 
 <head>
-
-    
     <!-- Redirect to giusreds.it -->
     <meta http-equiv="Refresh" content="0; URL=https://games.giusreds.it/lascoteca">
-
-
-
-
-    <!-- Proprieta -->
-    <meta charset="UTF-8">
-    <title>La Scoteca</title>
-    <meta name="description" content="Gioco in stile Pixel Art, simpaticamente ispirato a un meme del WEB.">
-    <meta name="keywords" content="scoteca, la scoteca, gioco, game, arcade, pixel, meme, mimmo modem, giusreds">
-    <meta name="author" content="Giuseppe Rossi">
-    <meta name="copyright" content="Giuseppe Rossi">
-    <meta name="robots" content="all">
-    <meta name="viewport" content="viewport-fit=contain, initial-scale=1.0, user-scalable=no">
-
-    <!-- Manifest -->
-    <link rel="manifest" href="./manifest.json">
-
-    <!-- Stile -->
-    <link rel="stylesheet" href="./assets/style.css" type="text/css">
-    <link rel="icon" href="./assets/icons/favicon.ico">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ3XF5X09D"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-XQ3XF5X09D');
-    </script>
-
-    <!-- Verifica Google Search Console -->
-    <meta name="google-site-verification" content="fNk-PlmX2cCbb6Bxn82zHP9nBngunpATrvITaGcvYhU">
-
-    <!-- Social Media Preview -->
-    <meta property="og:title" content="La Scoteca">
-    <meta property="og:description" content="Gioco in stile Pixel Art, simpaticamente ispirato a un meme del WEB.">
-    <meta property="og:image" content="https://giusreds.github.io/lascoteca/assets/social-preview.png">
-    <meta property="og:url" content="giusreds.github.io/lascoteca">
-    <meta name="twitter:card" content="summary_large_image">
-
-</head>
-
-<body>
-
-    <main class="container">
-        <div class="embed-responsive">
-            <!-- Schermata di caricamento -->
-            <div id="transition"></div>
-            <div id="loading">
-                <p>CARICAMENTO...</p>
-            </div>
-            <!-- Gioco -->
-            <iframe src="about:blank" id="game" title="Gioco"></iframe>
-        </div>
-    </main>
-
-    <!-- Script -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script src="./assets/script.js"></script>
-
-    <!-- PWAdapter -->
-    <script async src="https://cdn.jsdelivr.net/gh/giusreds/pwadapter@dist/pwadapter.min.js"></script>
-
-</body>
 
 </html>
